--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -5,9 +5,12 @@
     --color4: white;
     --color5: #0f0f0f;
 
+    //light Mode Color
+
+    --lightmodeBG: #238B8B !important;
+    --lightmodeCards: #0C3846 !important;
+    --lightColor1: #01D1FF !important;
 }
-
-
 
 
 @media (max-width: 35rem) {
@@ -60,14 +63,11 @@
     .switch-button {
         margin-right: 1rem !important;
     }
-
     .header {
         flex-direction: column;
         align-items: center;
-
         &-buttons {
             margin: 2rem 0;
-
             &-reverse {
                 margin-left: 1rem;
             }
@@ -89,7 +89,6 @@
         }
 
         &-title {
-
             margin: -1rem;
             display: flex;
             align-items: center;
@@ -136,6 +135,34 @@
 
 }
 
+@media (max-width: 235px) {
+    .tasks-cards {
+        &-title {
+            width: 90%;
+            margin-left: 1rem;
+            p {
+                font-size: 1.5rem;
+            }
+
+            h2 {
+                font-size: 2rem;
+            }
+        }
+
+        &-date {
+            width: 90%;
+            margin-left: 1rem;
+            p {
+                font-size: 1.5rem;
+            }
+
+            h2 {
+                font-size: 2rem;
+            }
+        }
+    }
+}
+
 html {
     font-size: 62.5%;
     font-family: 'Ruluko', sans-serif;
@@ -161,8 +188,15 @@ body {
 
 .date-now {
     margin: 1rem;
-
     h1 {
         color: var(--color3);
     }
+}
+
+.button-svg {
+    margin: 0 1rem;
+    background-color: var(--color3);
+    border-radius: 50%;
+    padding: .4rem;
+
 }
