last two changes maybe

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -7,7 +7,7 @@
 
     //light Mode Color
 
-    --lightmodeBG: #238B8B !important;
+    --lightmodeBG: #132931 !important;
     --lightmodeCards: #0C3846 !important;
     --lightColor1: #01D1FF !important;
 }
@@ -200,3 +200,4 @@ body {
     padding: .4rem;
 
 }
+
