--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,13 +1,15 @@
 .form {
     position: absolute;
-    top: 5%;
-    left: 4%;
+    top: 50%;
+    left: 50%;
+    z-index: 5000;
+    transform: translate(-50%, -50%);
     display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     opacity: 1 !important;
-    background-color: var(--color5);
+    background-color: #01091d;
     border-radius: 1.5rem;
     position: fixed;
     box-shadow: 0px 20px 205px -46px rgba(0, 0, 0, 0.85);
