--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,9 +1,6 @@
 .form {
     position: absolute;
-    top: 50%;
-    left: 50%;
     z-index: 5000;
-    transform: translate(-50%, -50%);
     display: none;
     flex-direction: column;
     align-items: center;
@@ -16,9 +13,14 @@
     height: 30rem;
     width: 20rem;
     padding: 2rem;
+    animation: flipInX .5s;
 }
 
-.custom-select > select {
+.flex {
+    display: flex;
+}
+
+.custom-select>select {
     width: 95%;
     outline: none;
     padding-left: rem;
@@ -30,15 +32,17 @@
     justify-self: flex-start;
     border-bottom: 2px solid var(--color1);
     padding-bottom: 0.5rem;
+
     option {
         background-color: cadetblue;
     }
+
     &:focus {
         border-bottom: 2px solid var(--color3);
     }
 
-    &:hover  {
-       cursor: pointer;
+    &:hover {
+        cursor: pointer;
     }
 }
 
@@ -56,6 +60,7 @@
     margin-left: 4rem;
     align-self: flex-start;
 }
+
 .form-input {
     width: 65%;
     background-color: transparent;
@@ -87,6 +92,7 @@
     border: none;
     font-size: 1.5rem;
     transition: all .3s ease-in-out;
+
     &:hover {
         transform: scale(1.1);
         cursor: pointer;
@@ -96,6 +102,7 @@
         background-color: transparent;
         color: #e29090;
     }
+
     &-save {
         background-color: var(--color3);
     }
