--- a/scss/_task.scss
+++ b/scss/_task.scss
@@ -22,8 +22,6 @@
         display: flex;
         align-items: center;
         justify-content: space-around;
-
-
     }
 
     h1 {
@@ -71,11 +69,8 @@
         justify-content: space-around;
         align-items: center;
         transition: all .5s ease-in-out;
-
-
         &:hover {
-            opacity: 1.5;
-            transform: translateY(-.5rem);
+            transform: scale(1.01);
         }
 
         &-number {
