--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -12,6 +12,21 @@
     --lightColor1: #01D1FF !important;
 }
 
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: var(--lightmodeCards);
+}
+
+body::-webkit-scrollbar {
+  width: 5px;
+  background-color: var(--color3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--color2);
+}
+
 
 @media (max-width: 35rem) {
     .date-now {
